fixed width property of the images on the carousel to look better on mobile

--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ footer {
 
 img {
     height: 500px;
-    width: 300px;
+    width: 200px;
     object-fit: contain;
 }
 
